--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  overflow-x: clip;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+img{
+  width: 100%;
+  max-width: 100%;
+}
+.main-wrapper {
+  display: flex;
+}
+.main-wrapper .left-main-wrapper{
+  flex: 0 0 17%;
+}
+.main-wrapper .right-main-wrapper{
+  padding: 30px;
+  flex: 0 0 83%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+}
+.right-main-wrapper .card-wrapper{
+  display: flex;
+  column-gap: 20px;
+}
+.right-main-wrapper .right-content{
+display: flex;
+column-gap: 30px;}
+.right-content .bar{
+  flex: 0 0 70%;
+}
+.right-content .pie {
+  flex: 0 0 28%
+}
+@media only screen and (max-width: 600px) {
+  .main-wrapper .left-main-wrapper {
+    flex: 0 0 10%;
+  }
+  .right-main-wrapper .right-content{
+    display: block;
+  }
+  .barchart{
+    flex: 0 0 100%;
+  }
+}
+@media only screen and (max-width: 1400px) {
+  .main-wrapper .left-main-wrapper {
+    flex: 0 0 0%;
+  }
+  .main-wrapper .right-main-wrapper {
+    flex: 0 0 100%;
+  }
 }
