--- a/src/components/cards/Card.css
+++ b/src/components/cards/Card.css
@@ -56,6 +56,9 @@
         position: relative;
         left: 15%;
     }
+    .card-body {
+        text-align: center;
+    }
 }
 
 @media only screen and (min-width: 601px) and (max-width: 1000px) {
